--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ set(CMAKE_C_STANDARD 11)
 
 
 include_directories("/usr/include/allegro5")
-target_link_libraries(ProjectName "/usr/include/allegro5/allegro.h)
+target_link_libraries(l1_t3_Jvrates "/usr/include/allegro5/allegro.h)
 add_executable(l1_t3_Jvrates
         buttons.c
         buttons.h
         gravidade.h
         tela.c
         tela.h
-        trabalho3.c)
+        trabalho3.c)")
